# PERMADEATH-LAUNCHER-REWRITE

./: .gitignore  README.md  angular.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  game.rs  mod.rs  options.rs
src-tauri/src/core/: logger.rs
src-tauri/src/database/: mod.rs
src-tauri/src/models/: mod.rs  options.rs  user.rs
src-tauri/src/services/: auth_service.rs  game_service.rs  java_installer.rs  mod.rs  options_repository.rs  server_status_service.rs  session_service.rs
src/app/: app.component.ts  app.config.ts  app.routes.ts
src/app/components/account/: account.component.css  account.component.html  account.component.ts
src/app/components/config/: config.component.css  config.component.html  config.component.ts
src/app/components/console-window/: console-window.component.css  console-window.component.html  console-window.component.ts
src/app/components/footer/: footer.component.css  footer.component.html  footer.component.ts
src/app/components/play/: play.component.css  play.component.html  play.component.ts
src/app/components/sidebar/: sidebar.component.css  sidebar.component.html  sidebar.component.ts
src/app/components/updates/: updates.component.css  updates.component.html  (+1 more)
src/app/models/: java-versions.enum.ts  options.ts  userdata.ts
src/app/services/: auth.service.ts  tauri.service.ts
(+3 files in other folders)
