[package]
name = "permadeath-launcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["Ponchisao326"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "permadeath_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "permadeath-launcher"
path = "src/main.rs"

[package.metadata.windows]
subsystem = "windows"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-process = "2"
dirs-next = "2.0.0"
tauri-plugin-dialog = "2"
log = "0.4.28"
simplelog = "0.12.2"
chrono = "0.4.42"
launcher-java-installer = { git = "https://github.com/PERMADEATH-PROJECT/launcher-java-installer", branch = "master" }
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "mysql", "chrono" ] }
dotenvy = "0.15.7"
bcrypt = "0.17.1"
keyring = "2.3.3"
uuid = { version = "1.18.1", features = ["v4"] }
